--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,57 @@
-<!DOCTYPE html>
-<html lang = "en">
+<!doctype html>
 <head>
-	<title>Contact Us</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	<link href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type = "text/css" rel = "stylesheet">
-	<link href = "css/contact.css" type = "text/css" rel = "stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Challenge To Conquer</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="js/jquery.bxslider.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/swiper.min.css">
+  <link rel="shortcut icon" href="img/favicons/favicon.ico">
+  <script src="js/header.js"></script>
 </head>
 
-</head>
-<body bgcolor="#E6E6FA" onload="initMap()">
-
-	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+<body>
+  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom navbar-main">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+            <div>
+                <a class="logo" href="index.html"><img src="img/logo.png" style="height: 70px; width: 70px; margin: 0px;"></a>
+                <a class="navbar-brand" href="index.html" style="margin-left: 10px; font-size: 35px;">Challenge To Conquer</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
+
+                  <!--
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                  -->
+                    <li style="margin-left: 25px">
+                        <a href="index.html">HOME</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="gallery.html">Gallery</a>
+                    <li>
+                        <a href="about.html#FAQ">FAQ</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="faq.html">FAQ</a>
-                    </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="donate.html">Donate</a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
+                      <a href="about.html#about-mithra"> Projects</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -53,22 +61,26 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <br>
+    <br>
+
+
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
 
-	            <div class="row">
-	                <div class="col-lg-12 text-center">
-	                    <h1 class = "form-color" id = "contact-header">Contact Us</h1>
-	                    <hr>
-	                </div>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h1 class = "form-color" id = "contact-header">Contact Us</h1>
+                        <hr>
+                    </div>
 
-	            </div>
+                </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="contact_form" method = "post" id="contactForm" novalidate>
+                    <form name="contact_form" method=POST action="mailto:challengetoconquer@gmail.com" enctype="text/plain" id = contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group form-color col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -100,58 +112,16 @@
                     </form>
                 </div>
             </div>
-            </div>
         </div>
     </section>
 
+<!-- Footer -->
 
-
-    <br>
-
-    <section class = "parallax">
-    	<div class = "parallax-inner">
-    		<h2 class="text-center">Contact Us at: info@challengetoconquer.org</h2>
-    	</div>
-    </section>
-
-
-    <div id = "map"style="width: 920px; height: 500px; border-color: black; border-style: solid">
-      <!--  Google Maps API -->
-    	<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDplfj_CSzuPB7HsVXxLTJzVKqMnusQ_EM&callback=initMap">
-        </script>
-    </div>
-
-    <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class = "small">Organized for Charitable purposes under United States IRS Section 501(c)(3)</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script
-	  src="https://code.jquery.com/jquery-3.1.1.min.js"
-	  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-	  crossorigin="anonymous">
-	</script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact.js"></script>
-
-	<!-- Theme JavaScript -->
-    <script src="js/contact.js"></script>
-
+<footer style = "width: 100%; height: 100px;">
+<br>
+    <p style="font-size: 15px; color: white; float: right; margin-right: 20px">Organized for Charitable purposes under <br>United States IRS Section 501(c)(3)</p>
+    <p style="font-size: 15px; color: white; float: left; margin-left: 20px">Your contributions are tax-deductible <br> to the fullest extent of the law</p>
+     <p style="font-size: 20px; color: white; float: center; margin-left: 20px">CHALLENGE TO CONQUER.ORG</p>
 
 
 </body>
