--- a/donate.html
+++ b/donate.html
@@ -1,88 +1,184 @@
-<head>  <link rel="stylesheet" href="css/swiper.min.css">
-<link rel="stylesheet" href="css/style.css">
+<head>  
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Challenge To Conquer</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="js/jquery.bxslider.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/swiper.min.css">
+  <link rel="shortcut icon" href="img/favicons/favicon.ico">
+  <script src="js/header.js"></script>
 </head>
+
 <body>
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-      <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header page-scroll">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-              </button>
-              <a class="navbar-brand" href="index.html">Home</a>
-          </div>
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom navbar-main">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div>
+                <a class="logo" href="index.html"><img src="img/logo.png" style="height: 70px; width: 70px; margin: 0px;"></a>
+                <a class="navbar-brand" href="index.html" style="margin-left: 10px; font-size: 35px;">Challenge To Conquer</a>
+            </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden">
-                      <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                      <a href="about.html">About</a>
-                  </li>\
-                  <li class="page-scroll">
-                      <a href="faq.html">FAQ</a>
-                  </li>
-                  <li class="page-scroll">
-                      <a href="donate.html">Donate</a>
-                  </li>
-                  <li class="page-scroll">
-                      <a href="contact.html">Contact</a>
-                  </li>
-              </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
-  </nav>
-  <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-              <div class="clearfix float-my-children" style="max-width: 95%; margin: 0 auto;">
-                <img src="img/slideshow/01.jpg" style="height:500px;" alt="First slide">
-                <div style="display: table; height: 500px; overflow: hidden;">
-                  <div style="display: table-cell; vertical-align: middle;">
-                    <h3 style="vertical-align: middle;">
-                      Donate to help disabled children around the world.
-                    </h3>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="img/slideshow/02.jpg" style="height: 500px; align: right;" alt="Second slide">
-          </div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
-          <div class="swiper-slide">Slide 6</div>
-          <div class="swiper-slide">Slide 7</div>
-          <div class="swiper-slide">Slide 8</div>
-          <div class="swiper-slide">Slide 9</div>
-          <div class="swiper-slide">Slide 10</div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+
+                  <!--
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                  -->
+                    <li style="margin-left: 25px">
+                        <a href="index.html">HOME</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="about.html#FAQ">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="donate.html">Donate</a>
+                    </li>
+                    <li>
+                      <a href="about.html#about-mithra"> Projects</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
+        <!-- /.container-fluid -->
+    </nav>
 
-    <!-- Swiper JS -->
-    <script src="js/swiper.min.js"></script>
 
-    <!-- Initialize Swiper -->
-    <script>
-    var swiper = new Swiper('.swiper-container', {
-        pagination: '.swiper-pagination',
-        nextButton: '.swiper-button-next',
-        prevButton: '.swiper-button-prev',
-        paginationClickable: true,
-        spaceBetween: 30,
-        centeredSlides: true,
-        autoplay: 2500,
-        autoplayDisableOnInteraction: false
-    });
-    </script>
+ <div class="clearfix" style = "background-color: #AED6F1; width: 100%; padding-bottom: 10px; padding-top: 80px" id = "more">
+  <div style = "float: left; width: 50%">
+    <img src="img/01.jpg" width=100% >
+  </div>
+   <div style = "float: left; padding-left: 50px; width: 30%;">
+      <br>
+      <p style="font-size: 20px; text-align: center;">
+      <br>
+      <strong>Every dollar donated directly supports Rehabilitating Challenged children in India
+        <br>
+        <br>
+        <br>
+      We are staffed entirely by volunteers. Our expenses are limited to credit card processing fees and website hosting
+      </strong></p>
+      <hr style="background-color: #FF6600; width: 50%">
+      
+      <br>
+   </div>
+  </div>
+
+<div class="clearfix" style = "background-color: #AED655; width: 100%; padding-bottom: 10px; padding-top: 50px; " id = "more">
+<div style="text-align: center; font-size: 20px;"><strong>Credit card transactions are securely processed by 2Checkout. Please click one of the options below to process your donation:</strong></div>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$25</font></span></h2>
+
+<div id="729498114642717576" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $25' />
+  <input type='hidden' name='li_0_price' value='25.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$50</font></span></h2>
+
+<div id="794578988936768288" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $50' />
+  <input type='hidden' name='li_0_price' value='50.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$75</font></span></h2>
+
+<div id="630416886227402280" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $75' />
+  <input type='hidden' name='li_0_price' value='75.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$100</font></span></h2>
+
+<div id="435255168436560223" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $100' />
+  <input type='hidden' name='li_0_price' value='100.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$250</font></span></h2>
+
+<div id="607810520501798686" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $250' />
+  <input type='hidden' name='li_0_price' value='250.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$500</font></span></h2>
+
+<div id="355056838641275602" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $500' />
+  <input type='hidden' name='li_0_price' value='500.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+
+<hr class="styled-hr" style="width:50%;"></hr>
+
+<h2 style="text-align:center;"><span style="font-weight: normal;"><font size="6">$1000</font></span></h2>
+
+<div id="949635194474160026" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><form action='https://www.2checkout.com/checkout/purchase' method='post'>
+  <input type='hidden' name='sid' value='102998935' />
+  <input type='hidden' name='mode' value='2CO' />
+  <input type='hidden' name='li_0_type' value='product' />
+  <input type='hidden' name='li_0_name' value='Donation - $1000' />
+  <input type='hidden' name='li_0_price' value='1000.00' />
+  <input name='submit' type='submit' value='Donate' />
+</form></div>
+
+    
     </body>
