--- a/index.html
+++ b/index.html
@@ -5,47 +5,51 @@
   <title>Challenge To Conquer</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="js/jquery.bxslider.min.js"></script>
+  <script src="logajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="logry.bxslider.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+   <script src="log/maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/swiper.min.css">
-  <link rel="shortcut icon" href="img/favicons/favicon.ico">
-  <script src="js/header.js"></script>
+ <!-- <link rel="shortcut icon" href="img/favicons/favicon.ico"> -->
+ <!-- Sachi's comments -->
+  <script src="loger.js"></script>
+
+
 
 </head>
 <body>
   <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom navbar-main">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="logo" href="index.html"><img src="img/editedLogo.png" style="height: 50px; width: 50px; margin: 0px;"></a>
-                <a class="navbar-brand" href="index.html" style="margin-left: 10px;">Challenge To Conquer</a>
+            <div>
+                <a class="logo" href="index.html"><img src="img/logo.png" style="height: 70px; width: 70px; margin: 0px;"></a>
+                <a class="navbar-brand" href="index.html" style="margin-left: 10px; font-size: 35px;">Challenge To Conquer</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
+
+                    <li style="margin-left: 25px">
+                        <a href="index.html">HOME</a>
                     </li>
-                    <li class="page-scroll" style="margin-left: 50px">
+                    <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="faq.html">FAQ</a>
+                    <li>
+                        <a href="about.html#FAQ">FAQ</a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
                         <a href="donate.html">Donate</a>
                     </li>
-                    <li class="page-scroll">
+                    <li>
+                      <a href="about.html#about-mithra"> Projects</a>
+                    </li>
+                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -54,12 +58,12 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-  <div id="mainimg" style="z-index: 3">
-    <img src="photos/Annual Day 3.jpg" style="width: 100%; margin:0px; filter: brightness(90%);">
+  <div id="mainimg">
+    <img src="img/Annual Day 3.jpg" style="width: 100%; margin:0px; filter: brightness(90%);">
   </div>
   <br>
   <div class="wording">
-  <h1 class="special"> Rehabilitating Mentally <br> and/or Physically Challenged <br> Children in India </h1>
+  <h1> Rehabilitating Mentally <br> and/or Physically Challenged <br> Children in India </h1>
 
   <canvas id="myCanvas" width="800" height="50"></canvas>
     <script>
@@ -69,7 +73,7 @@
       context.beginPath();
       context.moveTo(300, 25);
       context.lineTo(500, 25);
-      context.lineWidth = 5;
+      context.lineWidth = 4;
 
       // set line color
       context.strokeStyle = '#ff0000';
@@ -84,25 +88,26 @@
               <div style="display: table; height: 500px; overflow: hidden;">
                   <div style="display: table-cell; vertical-align: middle;">
                     <h3 style="vertical-align: middle;">
-                      Donate to help disabled children around the world.
+                      Donate to help disabled children in India.
                     </h3>
                   </div>
                 </div>
               </div>
-              <img src="img/slideshow/02.jpg" style="height: 100%; width:65%; align: right;" alt="Second slide">
+              <img src="img/DSC_0471.JPG" style="height: 100%; width: 50%; align: right;" alt="Second slide">
             </div>
           <div class="swiper-slide">
-              <div class="clearfix float-my-children" style="max-width: 95%; margin: 0 auto;">
-                <img src="img/slideshow/01.jpg" style="height:65%; width:65%;" alt="First slide">
-                <div style="display: table; height: 500px; overflow: hidden;">
+            <div class="clearfix float-my-children" style="max-width: 95%; margin: 0 auto;">
+              <div style="display: table; height: 500px; overflow: hidden;">
                   <div style="display: table-cell; vertical-align: middle;">
                     <h3 style="vertical-align: middle;">
-                      Improve conditions in underfunded rehabilitation institutions.
+                      Donate to help disabled children in India.
                     </h3>
                   </div>
                 </div>
               </div>
-          </div>
+              <img src="img/DSC_0117.JPG" style="height: 100%; width:50%; align: right;" alt="First slide">
+            </div>
+          
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
@@ -110,6 +115,8 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
     </div>
+  </div>
+</div>
 
     <!-- Swiper JS -->
     <script src="js/swiper.min.js"></script>
@@ -127,43 +134,56 @@
     });
     </script>
 
-  <div class = "row gray" style="margin: 0px; margin-top:5px" >
-    <div class="col-lg-12" style="text-align: center; padding-top:-10px; padding-bottom:20px;">
-          <h1 class="page-header specialblue">Who Are We?</h1>
-          <p style="text-align: center; font-size: 25px;">Challenge To Conquer is a US nonprofit that collects money for institutions and organizations in India that help disabled or poor individuals succeed and live a better life.</p>
-          <br>
-          <a class = "btn button" href = "about.html">Read More</a>
-    </div>
-  </div>
 
-  <div class="video" style="padding-top:5px;">
-    <video width="50%" height="50%" controls>
-    <source src="../video/ctc-video.mp4" type="video/mp4">\
+  <div class="clearfix" style = "background-color: #4682B4; width: 100%; padding-bottom: 10px;">
+  <div style = "float: left; width: 50%; padding-top:10px; padding-left:10px;">
+    <video width="90%" controls onmouseover="play()" onmouseleave="pause()">
+    <source src="img/CTC_Video.mp4" type="video/mp4">\
     Your browser does not support the video tag.
     </video>
   </div>
-
-  <div class="clearfix float-my-children blue">
-    <img src="img/building.jpg" width=50%>
-    <div class="container" style=" max-width: 97.5%;">
+   <div style = "float: left; width: 40%;">
       <br>
-      <p style="font-size: 30px;">
+      <p style="font-size: 20px;">
+      <br>
+      The specific and primary purpose for which ChallengeToConquer.Org is organized is to rehabilitate physically and/or mentally challenged children in India, through funding qualified projects.</p>
+      <br>
+      <a class = "btn button" href = "about.html">Read More</a>
+    </div>
+  </div>
+
+  <div class="clearfix" style = "background-color: #AED6F1; width: 100%; padding-bottom: 10px;" id = "more">
+  <div style = "float: left; width: 30%">
+    <img src="img/014.jpg" width=100% >
+  </div>
+   <div style = "float: left; width: 40%;">
+      <br>
+      <p style="font-size: 20px;">
       <br>
       <strong>Donations Serve Many Purposes:</strong></p>
-      <hr style="background-color:#DBDBDB;">
-      <ul style="font-size:20px; list-style-position: inside; text-align: left;">
-        <li>Meals (Breakfast, Lunch, and Dinner)</li>
-        <li>Rehabilitation For Poor Children</li>
-        <li>Renovations</li>
-        <li>New Equipment</li>
+      <hr style="background-color: #FF6600; width: 50%">
+      <ul style="font-size:20px; list-style-position: inside; text-align: center;">
+        <li>Meals</li>
+        <li>Rehabilitation For Challenged Children</li>
+        <li>Accomodations</li>
+        <li>Equipment</li>
+        <li>Medical Care and Supplies</li>
         <li>School Supplies And Toys For Young Children</li>
       </ul>
       <br>
-      <a class = "btn button gray" href="donate.html" style="color: #000066; "> Click Here to Donate Now</a>
-    </div>  </div>
+      <a class = "btn button blue" href="donate.html" style="color: #000066; "> Click Here to Donate Now</a>
+      <br>
+    </div>
+    <div style = "float: left; width: 28%; margin-right: 5px;">
+       <img src="img/DSC_0105.jpg" width=100%>
+    </div>
+    </div>
 
-  <div>
-    <p style="font-size: 30px">Add other info about mithra, patients, location, etc</p>
-  </div>
+  <footer style = "width: 100%; height: 100px;">
+<br>
+    <p style="font-size: 15px; color: white; float: right; margin-right: 20px">Organized for Charitable purposes under <br>United States IRS Section 501(c)(3)</p>
+    <p style="font-size: 15px; color: white; float: left; margin-left: 20px">Your contributions are tax-deductible <br> to the fullest extent of the law</p>
+     <p style="font-size: 20px; color: white; float: center; margin-left: 20px">CHALLENGE TO CONQUER.ORG</p>
+  
 
 </body>
